--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -12,7 +12,7 @@ font-family: 'Doppio One', sans-serif;
 
 body {
     font-family: 'Lato', sans-serif;
-    font-size: 18px;
+    font-size: 18px
 }
 
 ::selection {
