--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700|Arvo:400,700|Roboto:400,100,500,700|Doppio+One);
+@import url(http://fonts.googleapis.com/css?family=Allerta);
 @import "bootstrap.scss";
 
 /*
@@ -8,15 +9,19 @@ font-family: 'Lato', sans-serif;
 font-family: 'Arvo', serif;
 font-family: 'Roboto', sans-serif;
 font-family: 'Doppio One', sans-serif;
+font-family: 'Allerta', sans-serif;
 ----------------------------------------------*/
 
+$yellow : #fff7b8;
+
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
     font-size: 18px
 }
 
 ::selection {
-    background: #ffb7b7;
+    background: $yellow;
 }
 
 /*
@@ -29,14 +34,29 @@ feature classes
     padding-top: 40px;
     padding-bottom: 40px;
     box-shadow: 0px 5px 10px #7a7a7a;
+
+    .circle {
+        background-color: white;
+        width: 40px;
+        height: 40px;
+        margin: 0 auto;
+        color: black;
+        border-radius: 30px;
+        padding: 10px;
+        line-height: 40px;
+
+        span {
+            display: none;
+        }
+    }
     
     h1 {
-        font-family: 'Doppio One', sans-serif;
+        font-family: 'Allerta', sans-serif;
         font-size: 50px;
         text-align: center;
         line-height: 1em;
         font-size: 95px;
-        text-transform: uppercase;
+        //text-transform: uppercase;
         position: relative;
         letter-spacing: -5px;
         opacity: 1;
@@ -60,7 +80,7 @@ feature classes
     padding: 10px 0px 10px 0px;
     
     a {
-        color: black;
+        color: white;
     }
     .active {
         font-weight: bold;
@@ -101,27 +121,27 @@ feature classes
 }
 
 .feature-box-0 {
-    background-image: url(http://localhost/portfolio-super-new/img/features/0.png);
+    background-image: url(../../img/features/0.png);
 }
 
 .feature-box-1 {
-    background-image: url(http://localhost/portfolio-super-new/img/features/1.png);
+    background-image: url(../../img/features/1.png);
 }
 
 .feature-box-2 {
-    background-image: url(http://localhost/portfolio-super-new/img/features/2.png);
+    background-image: url(../../img/features/2.png);
 }
 
 .feature-box-3 {
-    background-image: url(http://localhost/portfolio-super-new/img/features/3.png);
+    background-image: url(../../img/features/3.png);
 }
 
 .feature-box-4 {
-    background-image: url(http://localhost/portfolio-super-new/img/features/4.png);
+    background-image: url(../../img/features/4.png);
 }
 
 .feature-box-5 {
-    background-image: url(http://localhost/portfolio-super-new/img/features/5.png);
+    background-image: url(../../img/features/5.png);
 }
 
 .feature-preview {
@@ -129,40 +149,43 @@ feature classes
 }
 
 .social-box {
-    width: 150px;
+    width: 110px;
     margin: 0 auto;
-    padding-bottom: 60px;
+    position: fixed;
+    padding-bottom: 5px;
+    paddint-top: 5px;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.35);
 }
 
 .social {
-    width: 40px; 
-    height: 40px; 
-    background-color: white;
+    width: 30px; 
+    height: 30px; 
     text-align: center; 
-    color: white; 
-    border-radius: 40px;
-    float: left;
-    margin-right: 10px;
-    opacity: 0.5;
-    color: black;
+    border-radius: 30px;
+    float: right;
+    margin-right: 5px;
+    margin-top: 5px;
     transition: all 0.3s ease-in-out;
-    
+    opacity: 0.75;
+    background-color: #c0c0c0;
+
     a { 
         display: block;
-        color: black;
-        line-height: 40px; 
+        color: white;
+        line-height: 30px; 
         
         &:hover {
             text-decoration: none !important;
-            color: black;
-            
         }
     }
 }
 
 .social-t { 
+    
     &:hover {
-        box-shadow: 0px 0px 10px 6px #7cbce3;
+        background-color: #7cbce3;
         opacity: 1;
     }
 }
@@ -170,7 +193,7 @@ feature classes
 .social-f {
     
     &:hover {
-        box-shadow: 0px 0px 10px 6px #3b5896;
+        background-color: #3b5896;
         opacity: 1;
     }
 }
@@ -178,15 +201,33 @@ feature classes
 .social-l {
     
     &:hover {
-        box-shadow: 0px 0px 10px 6px #256ca6;
+        background-color: #256ca6;
         opacity: 1;
     }
 }
 
 .nat-about {
     margin-top: 45px;
-}
 
+    .about-label {
+        text-align: center;
+        line-height: 28px;
+    }
+    .about-content {
+        line-height: 28px;
+        
+        /*
+        span:nth-child(odd) {
+            border-bottom: 1px #333333 dotted;
+
+        }
+        */
+
+        span:hover {
+            background-color: $yellow;
+        }
+    }
+}
 
 .nat-component {
     background-color: #ebebeb;
@@ -210,6 +251,12 @@ feature classes
 
 .required {
     color: red;
+}
+
+#nat-footer {
+    color: black;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 @media all and (max-width: 768px) {
