--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -125,7 +125,7 @@ feature classes
     }
 }
 
-@for $i from 0 through 6 {
+@for $i from 0 through 7 {
     .feature-box-#{$i} {
         background-image: url(../../img/features/#{$i}.png);
     }
@@ -246,6 +246,7 @@ feature classes
     padding-bottom: 100%;
     background-size: 100%;
     background-image: url(../../img/itslittlenathan.png);
+    background-repeat: no-repeat;
     border-radius: 300px;
     box-shadow: 0px 6px 8px #c0c0c0;
     transition: all 0.3s ease-in-out;
