form validation changes
*adding lots of javascript to validate form fields: name, email, phone,
and message
*removing $_GET messages and replacing regular old school POST with
ajax functionality and an effect when successfully submitted

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -275,6 +275,22 @@ feature classes
     display: block;
 }
 
+.danger-errors {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
+#successalert {
+    display: none;
+}
+
+/**
+ ** form input areas */
+#name, #email, #phone, #message {
+    transition: background-color ease-in-out 0.5s;
+}
+
 @media all and (max-width: 768px) {
     .nat-head h1 {
         font-size: 60px;
