dynamic generation of projects from json file
*removed all project html and added javascript to dynamically get all
the projects and put them on the page
*change formatting back to -sm bootstrap columns because xs makes icons
too small for tablets and bigger phone screens
*removed “pieces” part of json, not really needed and cleaned up the
way referencing the object in the javascript
*dynamically adding .row to bootstrap columns
*changed width to be skinnier on bigger screens, re-adjusts to 100% on
smaller in media query

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -94,6 +94,8 @@ feature classes
 
 .box {
     padding-top: 50px;
+    max-width: 90%;
+    margin: 0 auto;
 }
 
 .feature-title {
@@ -305,6 +307,9 @@ feature classes
     }
     .about-content {
         text-align: center;
+    }
+    .box {
+        max-width: 100%;
     }
 }
 
